deploy/other/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: webapp-destination
spec: 
  host: webservice
  subsets:
  - name: v1
    labels:
      version: v7.0
  - name: v0
    labels:
      version: v6.0
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
