deploy/other/vs-front.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: frontendservice
spec: 
  hosts:
    - "*"
  gateways:
    - webapp-gateway
  http:
  - route:
    - destination:
        host: frontendservice
    match: 
    - uri:
        prefix: /
