deploy/other/vs_fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-vs
spec:
  hosts:
    - webservice
  http:
  - route:
    - destination:
        host: webservice
        subset: v1
    fault:
      abort:
        httpStatus: 503
        percentage:
          value: 50
    retries:
      attempts: 0
